--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.8",
     "@mui/material": "^5.15.7",
+    "@tanstack/react-query": "^5.22.2",
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
