--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.8",
     "@mui/material": "^5.15.7",
+    "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
