--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_BASE_URL='http://localhost:5000/api/v1/'
+
+
+# recaptcha
+VITE_PUBLIC_RECAPTCHA_SITE_KEY='6LewVVYpAAAAAHVfORXM8DRq3k69OaAkw3P1UkjH'
+RECAPTCHA_SECRET_KEY='6LewVVYpAAAAAMBlWUSNIW4aSPKft3wI_2fpbhJ4'
