--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.50.1",
-    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.8.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
