--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
+    "emoji-picker-react": "^4.9.2",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
