--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
