--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
     "emoji-picker-react": "^4.9.2",
+    "firebase": "^10.11.0",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
