--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "emoji-picker-react": "^4.9.2",
     "firebase": "^10.11.0",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.50.1",
